@@ -1,0 +1,2 @@
+"""Circular import involving a sub-package."""
+from .subpkg import subpackage2
